# sandvault

./: .envrc  .gitignore  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  IMPLEMENTATION-DETAILS.md  LICENSE.md  README.md  TODO.md  dirt  pyproject.toml  sv  sv-agentsview-setup  sv-clone
.claude/commands/: release.md
.github/scripts/: bump-version  cleanup-ios-simulator  generate-release-data  patch-changelog  preboot-ios-simulator  tag-version
.github/workflows/: ci.yml  homebrew.yml
docs/: ios-simulator-tools.md
guest/home/: .claude.json  .env.sample  .npmrc  .zlogin  .zlogout  .zprofile  .zshenv  .zshrc  README.md  configure  configure.sh  package.json
helpers/: agentsview-config.py  agentsview-paths.sh  sv-ios-bridge  sv-ios-pick-device  sv-logging.sh  tomli.py  tomli_w.py
hooks/: block_local_simulator.py  pre_tool_use.py
playground/: README.md  sandbox-testbed
scripts/: auto-open-browser  bump-version  check-autobump  install-git-hooks  ios-simulator-mcp  kill-sandvault  lint  lint-all.sh  lint-bash.sh  lint-python.sh  listen.sh  open-browser  setup  tag-version  test-all.sh  test-bash.sh  test-python.sh  tests  validate  worktree
scripts/git-hooks/: pre-commit
skills/sv/: SKILL.md  sv-vibes.sh
tests/: README.md  clean  pytest.ini  ruff.toml  tests  validate
tests/bash/: helpers.sh  test_cli.sh  test_logging.sh  test_version.sh
tests/browser/: package-lock.json  package.json  test-playwright.js  test-puppeteer.js
tests/chrome/: package.json  test-playwright.js  test-puppeteer.js
tests/lightpanda/: package.json  (+3 more)
(+26 files in other folders)
