[project]
name = "sandvault"
version = "1.1.6"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["tests/hooks"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]
